# ScreenshotMacro

./: .gitignore  .isort.cfg  AGENTS.md  CLAUDE.md  LICENSE  Package.swift  README.md  build_app  build_app.py  clean.sh  config.json  convert_to_pdf.py  find_duplicate_images.py  justfile  main.py  pyproject.toml  requirements.txt  run  run.py  screenshot.py  screenshot_macro.py  setup.py
.githooks/: pre-push
.github/: CONVENTIONS.md  copilot-instructions.md
.github/workflows/: ci.yml
Resources/: AppIcon.icns
Sources/SMacroCore/: Core.swift
Sources/smacro-gui/: App.swift  DuplicatesSheet.swift
Sources/smacro-proto/: SMacro.swift
Tests/SMacroCoreTests/: CoreTests.swift
docs/: .bkit-memory.json  .pdca-status.json
docs/01-plan/features/: codebase-refactoring.plan.md
docs/02-design/features/: codebase-refactoring.design.md
docs/03-analysis/: codebase-refactoring.analysis.md
prompts/: 2026-02-25.json  2026-02-26.json  2026-02-27.json  2026-03-10.json  2026-03-21.json  2026-03-25.json  2026-04-12.json  2026-07-03.json  20260107_233802.md
scripts/: build-app.sh  clean.sh  validate-app-bundle.sh  validate-swift-proto.sh
src/: cli.py  config.py  constants.py  find_duplicate_images.py  gui_pyqt.py  gui_setup.py  macro.py  macro_pyqt.py  self.py  theme.py  utils.py  view.py
swift/: .gitignore  Package.swift  README.md
swift/Sources/: SMacro.swift
swift/Sources/SMacroCore/: Core.swift
swift/Sources/smacro-gui/: App.swift
swift/Sources/smacro-proto/: SMacro.swift
swift/prompts/: 2026-07-03.json
tests/: conftest.py  test_cli.py  test_config.py  test_find_duplicates.py  test_macro_worker.py  test_utils.py
